---------------------------------------------------------------------------------------------------
Version: 0.3.31
Date: 2022-03-26
  Changes:
    - Show mini-recipe panel for improper recipes also
---------------------------------------------------------------------------------------------------
Version: 0.3.30
Date: 2022-03-26
  Bugfixes:
    - fixing that hidden recipes for furnances are not presented anymore.
---------------------------------------------------------------------------------------------------
Version: 0.3.29
Date: 2022-03-23
  Changes:
    - Special treatment for zombie recipes 
    - Better treatment for hidden recipes. Present them only when used as fixed-recipe somewhere.
---------------------------------------------------------------------------------------------------
Version: 0.3.28
Date: 2022-03-19
  Bugfixes:
    - fixing crash when creating a BoilingRecipe
---------------------------------------------------------------------------------------------------
Version: 0.3.27
Date: 2022-03-18
  Changes:
    - logging of issues found in other mods improved
  Bugfixes:
    - fixing incompatible with se-space-trains
---------------------------------------------------------------------------------------------------
Version: 0.3.26
Date: 2022-03-18
  Changes:
    - pipette improved
  Bugfixes:
    - Remaining debug code removed
    - fixing incompatible Pyanodons Coal Processing
    - fixing incompatible with Industrial Revolution 2
    - fixing incompatible with both aai industry and Krastorio 2
---------------------------------------------------------------------------------------------------
Version: 0.3.25
Date: 2022-03-17
  Changes:
    - Show hidden recipes
    - Missing locales added for domains and categories
  Bugfixes:
    - Missing hidden recipe for water to steam
    - fixing Crash when loading se-energy-transmitter-chamber from space exploration mod