@@ -11,7 +11,7 @@ FuelCategory.system.Properties = {
     Fuels = {
         cache = true,
         get = function(self)
-            return self.Database.ItemsForFuelCategory[self.Prototype.name] --
+            return self.Database.ItemsForFuelCategory[self.Name] --
             :Select(function(item) return self.Database:GetItem(nil, item) end)
         end,
     },
@@ -19,12 +19,12 @@ FuelCategory.system.Properties = {
         cache = true,
         get = function(self)
             local prototype = self.Prototype
-            local result = "tooltip-category-" .. prototype.name
+            local result = "tooltip-category-" .. self.Name
             if game.is_valid_sprite_path(result) then return result end
             local item = self.Fuels:Top()
             if item then
                 result = "item." .. self.Fuels:Top(false).Prototype.name
-            return result
+                return result
             end
 
             log {
@@ -35,6 +35,21 @@ FuelCategory.system.Properties = {
             return "utility/missing_icon"
 
         end,
+    },
+
+    Burners = {
+        cache = true,
+        get = function(self)
+            local result = Array:new(self.Database.EntitiesForBurnersFuel[self.Name]) --
+            :Select(function(workerName) return self.Database:GetEntity(workerName) end)
+            result:Sort(function(a, b) return a:IsBefore(b) end)
+            return result
+        end,
+    },
+
+    Properties = {
+        cache = true,
+        get = function(self) return Array:new{self.Fuels, self.Burners}:ConcatMany() end,
     },
 
 }
@@ -49,8 +64,7 @@ function FuelCategory:new(name, prototype, database)
     )
 
     dassert(self.Prototype.object_name == "LuaFuelCategoryPrototype")
-
-    self.Workers = Array:new()
+    self.Name = name
     self.SpriteType = "fuel-category"
 
     function self:SortAll() end
